list-quest component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
 
 			<!-- Main content -->
 			<div class="content-wrapper">
-
+  
 				<!-- Page header -->
 			<app-app-header></app-app-header>
 				<!-- /page header -->
@@ -75,7 +75,7 @@
 				
 					<!-- /dashboard content -->
 
-
+ <router-outlet></router-outlet>
 					<!-- Footer -->
 				<app-app-footer></app-app-footer>
 					<!-- /footer -->
