--- a/src/app/manage-questionnaire/list-questionnaire/list-questionnaire.component.html
+++ b/src/app/manage-questionnaire/list-questionnaire/list-questionnaire.component.html
@@ -1,3 +1,78 @@
-<p>
-  list-questionnaire works!
-</p>
+<div class="panel panel-flat">
+								<div class="panel-heading">
+									<h6 class="panel-title">Liste de questionnaires </h6>
+									<div class="heading-elements">
+										<span class="heading-text"></span>
+										<ul class="icons-list">
+					                		<li class="dropdown text-muted">
+					                			<button type="button" class="btn btn-success btn-xs btn-icon"> <i class="glyphicon glyphicon-plus"></i></button>
+												<ul class="dropdown-menu dropdown-menu-right">
+													<li><a href="#"><i class="icon-sync"></i> Update data</a></li>
+													<li><a href="#"><i class="icon-list-unordered"></i> Detailed log</a></li>
+													<li><a href="#"><i class="icon-pie5"></i> Statistics</a></li>
+													<li class="divider"></li>
+													<li><a href="#"><i class="icon-cross3"></i> Clear list</a></li>
+												</ul>
+					                		</li>
+					                	</ul>
+									</div>
+								</div>
+
+								<div class="panel-body">
+									<div id="sales-heatmap"></div>
+								</div>
+
+								<div class="table-responsive">
+									<table class="table text-nowrap">
+										<thead>
+											<tr>
+												<th>Questionnaire</th>
+												<th>Nombre de questions</th>
+												<th>Actions</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr *ngFor="let questionnaire of questionnaires">
+												<td>
+													<div class="media-left media-middle">
+														<a href="#" class="btn bg-primary-400 btn-rounded btn-icon btn-xs">
+															<span class="letter-icon"></span>
+														</a>
+													</div>
+
+													<div class="media-body">
+														<div class="media-heading">
+															<a href="#" class="letter-icon-title">{{questionnaire.titre}} </a>
+														</div>
+
+														<div class="text-muted text-size-small"><i class="icon-checkmark3 text-size-mini position-left"></i> New order</div>
+													</div>
+												</td>
+												<td>
+													<span class="text-muted text-size-small">{{questionnaire.nbr_questions}}</span>
+												</td>
+												<td>
+													<h6 class="text-semibold no-margin">
+                                                        
+                                                        <ul class="icons-list">
+
+
+
+
+                                                <li class="text-primary-600"><a href="#"><i class="icon-pencil7"></i></a></li>
+                                                <li class="text-danger-600"><a href="#"><i class="icon-trash"></i></a></li>
+        
+                                            </ul>
+
+                                                    </h6>
+												</td>
+											</tr>
+
+										
+
+
+										</tbody>
+									</table>
+								</div>
+							</div>
+							<!-- /daily sales -->
