--- a/src/app/manage-questionnaire/list-questionnaire/list-questionnaire.component.html
+++ b/src/app/manage-questionnaire/list-questionnaire/list-questionnaire.component.html
@@ -49,7 +49,7 @@
 													</div>
 												</td>
 												<td>
-													<span class="text-muted text-size-small">{{questionnaire.nbr_questions}}</span>
+													<span class="text-muted text-size-small">to calculate</span>
 												</td>
 												<td>
 													<h6 class="text-semibold no-margin">
