--- a/src/app/layout/app-main-navigation/app-main-navigation.component.html
+++ b/src/app/layout/app-main-navigation/app-main-navigation.component.html
@@ -9,7 +9,15 @@
 								<li>
 									<a ><i class="icon-copy"></i> <span>Questionnaire</span></a>
 									<ul>
-										<li><a href="/questionnaires" id="layout1">Liste de questionnaires</a></li>
+										<li><a [routerLink]="['/questionnaires']" id="layout1">Liste de questionnaires</a></li>
+										
+									</ul>
+								</li>
+
+								<li>
+									<a ><i class="icon-users"></i> <span>Personnel</span></a>
+									<ul>
+										<li><a [routerLink]="['/personnels']" id="layout1">Liste de personnels</a></li>
 										
 									</ul>
 								</li>
