--- a/src/app/layout/app-main-navigation/app-main-navigation.component.html
+++ b/src/app/layout/app-main-navigation/app-main-navigation.component.html
@@ -4,7 +4,13 @@
 
 								<!-- Main -->
 								<li class="navigation-header"><span>Main</span> <i class="icon-menu" title="Main pages"></i></li>
-								<li class="active"><a href="index.html"><i class="icon-home4"></i> <span>Dashboard</span></a></li>
+
+							
+								<li>
+									<a [routerLink]="['/']"  ><i class="icon-home4"></i> <span>Dashboard</span></a>
+                                
+								</li>
+							
 							
 								<li>
 									<a ><i class="icon-copy"></i> <span>Questionnaire</span></a>
