--- a/src/app/manage-personnel/list-personnel/list-personnel.component.html
+++ b/src/app/manage-personnel/list-personnel/list-personnel.component.html
@@ -1,4 +1,18 @@
-<!-- Linked lists -->
+
+
+<!-- Main content -->
+			<div class="content-wrapper">
+  
+				<!-- Page header -->
+			<app-app-header [first]="first" [second]="second" [second_bool]="second_bool" [second_url]="second_url"></app-app-header>
+				<!-- /page header -->
+
+
+				<!-- Content area -->
+<div class="content">
+				<!-- our component html specifications -->
+				
+				<!-- Linked lists -->
 					<div class="row">
 						<div class="col-md-12">
 
@@ -69,3 +83,15 @@
 							<!-- /list with text -->
             </div>
 					</div>
+
+						<!-- /our component html specifications -->	
+
+				<!-- Footer -->
+				<app-app-footer></app-app-footer>
+					<!-- /footer -->
+
+				</div>
+				<!-- /content area -->
+
+			</div>
+			<!-- /main content -->
