--- a/src/app/layout/app-main-navigation/app-main-navigation.component.html
+++ b/src/app/layout/app-main-navigation/app-main-navigation.component.html
@@ -16,6 +16,7 @@
 									<a ><i class="icon-copy"></i> <span>Questionnaire</span></a>
 									<ul>
 										<li><a [routerLink]="['/questionnaires']" id="layout1">Liste de questionnaires</a></li>
+										<li><a [routerLink]="['/questionnaires/add']" id="layout1">Ajouter un questionnaire</a></li>
 										
 									</ul>
 								</li>
@@ -24,6 +25,7 @@
 									<a ><i class="icon-users"></i> <span>Personnel</span></a>
 									<ul>
 										<li><a [routerLink]="['/personnels']" id="layout1">Liste de personnels</a></li>
+										<li><a [routerLink]="['/personnels/add']" id="layout1">Ajouter un personnel</a></li>
 										
 									</ul>
 								</li>
