--- a/src/app/manage-personnel/add-personnel/add-personnel.component.html
+++ b/src/app/manage-personnel/add-personnel/add-personnel.component.html
@@ -1,5 +1,14 @@
+<!-- Main content -->
+		
+  
+				<!-- Page header -->
+			<app-app-header [first]="first" [second]="second" [second_bool]="second_bool" [second_url]="second_url"></app-app-header>
+				<!-- /page header -->
 
-<!-- Basic legend -->
+<div class="content">
+				<!-- Content area -->
+
+
 							<form  [formGroup]="myForm" novalidate (ngSubmit)="save(myForm)" class="form-horizontal" >
 								<div class="panel panel-flat">
 									<div class="panel-heading">
@@ -56,3 +65,13 @@
 								</div>
 							</form>
 							<!-- /basic legend -->
+
+											<!-- /our component html specifications -->	
+	<!-- Footer -->
+				<app-app-footer></app-app-footer>
+					<!-- /footer -->
+
+			</div>
+				<!-- /content area -->
+
+			<!-- /main content -->
