--- a/src/app/layout/app-footer/app-footer.component.html
+++ b/src/app/layout/app-footer/app-footer.component.html
@@ -1,3 +1,3 @@
 	<div class="footer text-muted">
-						&copy; 2017. <a href="#">Sondage Web App Kit</a> by <a href="http://vayetek.com" target="_blank">Vayetek</a>
+						&copy; 2017. <a href="#">Survey Platform</a> by <a href="http://vayetek.com" target="_blank">Vayetek</a>
 					</div>
