--- a/src/app/manage-personal/add-personal/add-personal.component.html
+++ b/src/app/manage-personal/add-personal/add-personal.component.html
@@ -32,9 +32,9 @@
 											<div class="form-group">
 												<label class="col-lg-3 control-label">Adresse mail:</label>
 												<div class="col-lg-9">
-													<input  type="text"  class="form-control" formControlName="mail" placeholder="Adresse mail" >
-													 <small *ngIf="!myForm.controls.mail.valid"  class="text-danger">
-             											         Adresse mail correcte est obligatoire.
+													<input  type="text"  class="form-control" formControlName="email" placeholder="Adresse email" >
+													 <small *ngIf="!myForm.controls.email.valid"  class="text-danger">
+             											         Adresse email correcte est obligatoire.
 													</small>
 														<small >
 
