--- a/src/app/manage-personal/list-personal/list-personal.component.html
+++ b/src/app/manage-personal/list-personal/list-personal.component.html
@@ -1,7 +1,7 @@
 				<!-- our component html specifications -->
 				
 				<!-- Linked lists -->
-					<div class="row">
+					<div class="row" [ngBusy]="busy">
 						<div class="col-md-12">
 
 							<!-- List with text -->
@@ -30,13 +30,13 @@
 											</tr>
 										</thead>
 										<tbody>
-											<tr *ngFor="let personal of personals">
+											<tr *ngFor="let personal of personals;let i = index">
 												<td>
-													<div class="media-left"><img src="{{personal.image}}" class="img-circle" alt=""></div>
+													<div class="media-left"><img src="{{personal.profileImageURL}}" class="img-circle" alt=""></div>
 
 													<div class="media-body">
 														<div class="media-heading">
-															<a href="#" class="letter-icon-title"><i class="icon-mail5 text-size-mini position-left"></i> {{personal.mail}}</a>
+															<a href="#" class="letter-icon-title"><i class="icon-mail5 text-size-mini position-left"></i> {{personal.email}}</a>
 														</div>
 
 														
@@ -51,7 +51,7 @@
 
 
 
-                                                <li class="text-danger-600"><a href="#"><i class="icon-trash"></i></a></li>
+                                                <li class="text-danger-600"><a (click)="deletePersonal(i,personal._id)"><i class="icon-trash"></i></a></li>
         
                                             </ul>
 
