--- a/src/app/manage-survey/list-survey/list-survey.component.html
+++ b/src/app/manage-survey/list-survey/list-survey.component.html
@@ -27,30 +27,24 @@
 										<thead>
 											<tr>
 												<th>Questionnaire</th>
-												<th>Nombre de questions</th>
+												
 												<th>Actions</th>
 											</tr>
 										</thead>
 										<tbody>
-											<tr *ngFor="let survey of surveys">
+											<tr *ngFor="let survey of surveys;let i = index">
 												<td>
-													<div class="media-left media-middle">
-														<a href="#" class="btn bg-primary-400 btn-rounded btn-icon btn-xs">
-															<span class="letter-icon"></span>
-														</a>
-													</div>
+													
 
 													<div class="media-body">
 														<div class="media-heading">
-															<a href="#" class="letter-icon-title">{{survey.title}} </a>
+															<a href="#" class="letter-icon-title"><i class="icon-file-text3 text-size-mini position-left"></i> {{survey.title}} </a>
 														</div>
 
-														<div class="text-muted text-size-small"><i class="icon-checkmark3 text-size-mini position-left"></i></div>
+														<div class="text-muted text-size-small"></div>
 													</div>
 												</td>
-												<td>
-													<span class="text-muted text-size-small">to calculate</span>
-												</td>
+
 												<td>
 													<h6 class="text-semibold no-margin">
                                                         
@@ -60,7 +54,7 @@
 
 
                                                 <li class="text-primary-600"><a href="#"><i class="icon-pencil7"></i></a></li>
-                                                <li class="text-danger-600"><a href="#"><i class="icon-trash"></i></a></li>
+                                                <li class="text-danger-600"><a (click)="deleteSurvey(i,survey._id)"><i class="icon-trash"></i></a></li>
         
                                             </ul>
 
