--- a/src/app/manage-personal/list-personal/list-personal.component.html
+++ b/src/app/manage-personal/list-personal/list-personal.component.html
@@ -36,7 +36,7 @@
 
 													<div class="media-body">
 														<div class="media-heading">
-															<a href="#" class="letter-icon-title"><i class="icon-mail5 text-size-mini position-left"></i> {{personal.email}}</a>
+															<a  class="letter-icon-title"><i class="icon-mail5 text-size-mini position-left"></i> {{personal.email}}</a>
 														</div>
 
 														
