--- a/src/app/manage-survey/list-survey/list-survey.component.html
+++ b/src/app/manage-survey/list-survey/list-survey.component.html
@@ -38,7 +38,7 @@
 
 													<div class="media-body">
 														<div class="media-heading">
-															<a href="#" class="letter-icon-title"><i class="icon-file-text3 text-size-mini position-left"></i> {{survey.title}} </a>
+															<a (click)="detailSurvey(i,survey._id)" class="letter-icon-title"><i class="icon-file-text3 text-size-mini position-left"></i> {{survey.title}} </a>
 														</div>
 
 														<div class="text-muted text-size-small"></div>
