--- a/src/app/layout/full-layout.component.html
+++ b/src/app/layout/full-layout.component.html
@@ -147,7 +147,7 @@
 			<div class="content-wrapper">
   
 				<!-- Page header -->
-			<app-app-header [first]="first" [second]="second" [second_bool]="second_bool" [second_url]="second_url"></app-app-header>
+			<app-app-header [first]="first" [second]="second" [second_bool]="second_bool" [first_url]="first_url"></app-app-header>
 				<!-- /page header -->
 
 
