--- a/src/app/layout/app-header/app-header.component.html
+++ b/src/app/layout/app-header/app-header.component.html
@@ -15,7 +15,7 @@
 
 						<ul  *ngIf="second_bool;  else falsyTemplateclass" class="breadcrumb">
 							<li><a [routerLink]="['/']"><i class="icon-home2 position-left"></i>Acceuil</a></li>
-							<li ><a [routerLink]="second_url"> {{first}}</a></li>
+							<li ><a (click)="goUrl(first_url)"> {{first}}</a></li>
 							<li class="active" >{{second}}</li>
 						</ul>
 						<ng-template #falsyTemplateclass>
