--- a/src/app/manage-personal/list-personal/list-personal.component.html
+++ b/src/app/manage-personal/list-personal/list-personal.component.html
@@ -1,7 +1,7 @@
 				<!-- our component html specifications -->
 				
 				<!-- Linked lists -->
-					<div class="row" [ngBusy]="busy">
+					<div class="row">
 						<div class="col-md-12">
 
 							<!-- List with text -->
