--- a/src/app/layout/full-layout.component.html
+++ b/src/app/layout/full-layout.component.html
@@ -54,7 +54,7 @@
 				<li class="dropdown dropdown-user">
 					<a class="dropdown-toggle" data-toggle="dropdown">
 						<img src="assets/images/placeholder.jpg" alt="">
-						<span>{{personal.email}}</span>
+						<span>{{user.email}}</span>
 						<i class="caret"></i>
 					</a>
 
@@ -88,7 +88,7 @@
                 <a href="#" class="media-left"><img src="assets/images/placeholder.jpg" class="img-circle img-sm"
                                                     alt=""></a>
                 <div class="media-body">
-                  <span class="media-heading ">{{personal.email}}</span>
+                  <span class="media-heading ">{{user.email}}</span>
                   <div class="text-size-mini text-muted">
                    
                   </div>
