--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,95 +2,168 @@
 <div class="login-container login-cover">
 
 	<!-- Page container -->
-	<div class="page-container">
+  <div class="page-container">
+    
+        <!-- Page content -->
+        <div class="page-content">
+    
+          <!-- Main content -->
+          <div class="content-wrapper">
+    
+            <!-- Content area -->
+            <div class="content pb-20">
+    
+              <!-- Tabbed form -->
+              <div class="tabbable panel login-form width-400">
+                <ul class="nav nav-tabs nav-justified">
+                  <li class="active"><a href="#basic-tab1" data-toggle="tab"><h6>Sign in</h6></a></li>
+                  <li><a href="#basic-tab2" data-toggle="tab"><h6>Register</h6></a></li>
+                </ul>
+    
+                <div class="tab-content panel-body">
+                  <div class="tab-pane fade in active" id="basic-tab1">
+                       
 
-		<!-- Page content -->
-		<div class="page-content">
-
-			<!-- Main content -->
-			<div class="content-wrapper">
-
-				<!-- Content area -->
-				<div class="content pb-20">
-
-					<!-- Form with validation -->
-					<form #loginForm="ngForm" class="form-validate">
-            <div class="panel panel-body login-form">
-              <div class="text-center">
-                <div class="icon-object border-slate-300 text-slate-300"><i class="icon-reading"></i></div>
-                <h5 class="content-group">Login to your account
-                  <small class="display-block">Your credentials</small>
-                </h5>
-              </div>
-              <div
-                class="form-group has-feedback has-feedback-left
-                {{email.errors && (email.dirty || email.touched) ? 'has-error' :''}}">
-                <input [(ngModel)]="credentials.email" #email="ngModel" type="email" class="form-control"
-                       placeholder="Email"
-                       name="email" required email>
-                <div class="form-control-feedback">
-                  <i class="icon-user text-muted"></i>
-                </div>
-              </div>
-
-              <div class="form-group has-feedback has-feedback-left
-                   {{password.errors && (password.dirty || password.touched) ? 'has-error' :''}}">
-                <input [(ngModel)]="credentials.password" #password="ngModel"
-                       type="password" class="form-control" placeholder="Mot de passe"
-                       name="password" required="required" minlength="5">
-                <div class="form-control-feedback">
-                  <i class="icon-lock2 text-muted"></i>
-                </div>
-              </div>
-
-              <div class="form-group login-options">
-                <div class="row">
-                  <div class="col-sm-6">
-                    <label class="checkbox-inline">
-                      <input type="checkbox" class="styled" checked="checked">
-                      Remember
-                    </label>
-                  </div>
-
-                  <!--<div class="col-sm-6 text-right">
-                    <a href="login_password_recover.html">Forgot password?</a>
-                  </div> -->
-                </div>
-              </div>
-
-              <div class="alert alert-danger no-border">
-                <span class="text-semibold">Oh snap!</span> Change a few things up and <a href="#" class="alert-link">try
-                submitting again</a>.
-              </div>
-
-              <div class="form-group">
-                <!--
-                                <div class="panel panel-body border-top-primary text-center">
-                                  <h6 class="no-margin text-semibold">Slide Up</h6>
-                                  <p class="text-muted content-group-sm">Spinner slides from bottom</p>
-
-                                  <button type="button" class="btn btn-default btn-ladda btn-ladda-spinner" data-spinner-color="#333" data-style="slide-up"><span class="ladda-label">Spinner</span></button>
-                                  <button type="button" class="btn bg-slate-400 btn-ladda btn-ladda-progress" data-style="slide-up"><span class="ladda-label">Spinner + Progress</span></button>
+                        
+                       <form #loginForm="ngForm" class="form-validate">
+                          <div class="panel panel-body login-form">
+                            <div class="text-center">
+                              <div class="icon-object border-slate-300 text-slate-300"><i class="icon-reading"></i></div>
+                              <h5 class="content-group">Login to your account
+                                <small class="display-block">Your credentials</small>
+                              </h5>
+                            </div>
+                            <div
+                              class="form-group has-feedback has-feedback-left
+                              {{email.errors && (email.dirty || email.touched) ? 'has-error' :''}}">
+                              <input [(ngModel)]="credentials.email" #email="ngModel" type="email" class="form-control"
+                                     placeholder="Email"
+                                     name="email" required email>
+                              <div class="form-control-feedback">
+                                <i class="icon-user text-muted"></i>
+                              </div>
+                            </div>
+              
+                            <div class="form-group has-feedback has-feedback-left
+                                 {{password.errors && (password.dirty || password.touched) ? 'has-error' :''}}">
+                              <input [(ngModel)]="credentials.password" #password="ngModel"
+                                     type="password" class="form-control" placeholder="Mot de passe"
+                                     name="password" required="required" minlength="5">
+                              <div class="form-control-feedback">
+                                <i class="icon-lock2 text-muted"></i>
+                              </div>
+                            </div>
+              
+                            <div class="form-group login-options">
+                              <div class="row">
+                                <div class="col-sm-6">
+                                  <label class="checkbox-inline">
+                                    <input type="checkbox" class="styled" checked="checked">
+                                    Remember
+                                  </label>
+                                </div>
+                                <div class="col-sm-6 text-right">
+                                    <a href="login_password_recover.html">Forgot password?</a>
+                                  </div>
+                                <!--<div class="col-sm-6 text-right">
+                                  <a href="login_password_recover.html">Forgot password?</a>
                                 </div> -->
-                <button  (click)="loginSubmit()" type="submit" class="btn bg-blue btn-block"
-                        [disabled]="!loginForm.form.valid">Login <i
-                  class="icon-arrow-right14 position-right"></i></button>
+                              </div>
+                            </div>
+              
+                            <div *ngIf="alert1" class="alert alert-danger no-border">
+                              <span class="text-semibold">Oh snap!</span> Change a few things up and <a href="#" class="alert-link">try
+                              submitting again</a>.
+                            </div>
+              
+                            <div class="form-group">
+                              
+                              <button  (click)="loginSubmit()" type="submit" class="btn bg-blue btn-block"
+                                      [disabled]="!loginForm.form.valid">Login <i
+                                class="icon-arrow-right14 position-right"></i></button>
+                            </div>
+              
+                          </div>
+                        </form>
+    
+                    <div class="content-divider text-muted form-group"><span>VayeSurvey</span></div>
+   
+    
+                    <span class="help-block text-center no-margin">&copy; 2017. <a href="#">VayeSurvey</a> by <a href="http://vayetek.com" target="_blank">Vayetek</a></span>
+                 
+                 
+   
+                     </div>
+    
+                  <div class="tab-pane fade" id="basic-tab2">
+                       <form #registerForm="ngForm" class="form-validate">
+                          <div class="panel panel-body login-form">
+                              <div class="text-center">
+                                  <div class="icon-object border-success text-success"><i class="icon-plus3"></i></div>
+                                  <h5 class="content-group">Create new account <small class="display-block">All fields are required</small></h5>
+                                </div>
+                            <div
+                              class="form-group has-feedback has-feedback-left
+                              {{email.errors && (email.dirty || email.touched) ? 'has-error' :''}}">
+                              <input [(ngModel)]="user.email" #emailUser="ngModel" type="email" class="form-control"
+                                     placeholder="Email"
+                                     name="emailUser" required email>
+                              <div class="form-control-feedback">
+                                <i class="icon-user text-muted"></i>
+                              </div>
+                            </div>
+              
+                            <div class="form-group has-feedback has-feedback-left
+                                 {{password.errors && (password.dirty || password.touched) ? 'has-error' :''}}">
+                              <input [(ngModel)]="user.password" #passwordUser="ngModel"
+                                     type="password" class="form-control" placeholder="Mot de passe"
+                                     name="passwordUser" required="required" minlength="5">
+                              <div class="form-control-feedback">
+                                <i class="icon-lock2 text-muted"></i>
+                              </div>
+                            </div>
+              
+                            <div  *ngIf="alert2" class="alert alert-danger no-border">
+                              <span class="text-semibold"></span> Please fill a valid email address <a href="#" class="alert-link">try
+                              submitting again</a>.
+                            </div>
+                          
+              
+                            <div class="form-group">
+                             
+
+
+                    <button type="submit"  (click)="registerSubmit()"  [disabled]="!registerForm.form.valid" class="btn bg-indigo-400 btn-block">Register <i class="icon-circle-right2 position-right"></i></button>
+                                              
+   
+                            </div>
+              
+                          </div>
+                        </form>
+
+                        <div class="content-divider text-muted form-group"><span>VayeSurvey</span></div>
+                        
+                         
+                                         <span class="help-block text-center no-margin">&copy; 2017. <a href="#">VayeSurvey</a> by <a href="http://vayetek.com" target="_blank">Vayetek</a></span>
+                                      
+
+
+                    
+                  </div>
+                </div>
               </div>
-
+              <!-- /tabbed form -->
+    
             </div>
-          </form>
-					<!-- /form with validation -->
-
-				</div>
-				<!-- /content area -->
-
-			</div>
-			<!-- /main content -->
-
-		</div>
-		<!-- /page content -->
-
-	</div>
+            <!-- /content area -->
+    
+          </div>
+          <!-- /main content -->
+    
+        </div>
+        <!-- /page content -->
+    
+      </div>
 	<!-- /page container -->
 
 </div>
