--- a/src/app/layout/full-layout.component.html
+++ b/src/app/layout/full-layout.component.html
@@ -8,7 +8,7 @@
 	<title>Sondage</title>
 
 	<!-- Global stylesheets -->
-
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
 	
 
 
