--- a/src/app/manage-survey/list-survey/list-survey.component.html
+++ b/src/app/manage-survey/list-survey/list-survey.component.html
@@ -52,7 +52,7 @@
 
 
 													
-												<li class="text-success-600"><a ><i class="icon-bars-alt"></i></a></li>
+												<li class="text-success-600"><a (click)="statSurvey(i,survey._id)"><i class="icon-bars-alt"></i></a></li>
                                                 <li class="text-primary-600"><a (click)="editSurvey(i,survey._id)"><i class="icon-pencil7"></i></a></li>
                                                 <li class="text-danger-600"><a (click)="deleteSurvey(i,survey._id)"><i class="icon-trash"></i></a></li>
         
